# meme_convention

./: .env_template  README.md  pre-commit-config.yaml  pyproject.toml  setting_config.yaml
.github/workflows/: test.yaml
meme_convention/: main.py
meme_convention/autocomplete/: autocomplete.py
meme_convention/autocompleting/: autocomplete.py
meme_convention/db/: admin.py  user.py
meme_convention/db/get_from_web/: __init__.py  giphy.py  tenor.py
meme_convention/db/legacy_reference/: psql_connection_test.py
meme_convention/db/local/: __init__.py  local.py
meme_convention/db/postgresql/: base.py  postgresql.py  user.py
meme_convention/db/supabase/: delete.py  get.py  image_manager.py  upload.py
meme_convention/frontend/: context_dialog.py  gui.py  image_processor.py  meme_selection.py  menubar.py
meme_convention/meme_feature/: autocomplete.py
meme_convention/recommendar/: context_injection_prompt.py  context_prompt.py  image_analyzer.py  multimodal_analyzer.py  recommender.py  screenshot.py  text_recorder.py
meme_convention/setting/: meme_adder.py  music_player.py  setting_configuration.py  system_setting.py  system_setting_gui.py
test/autocompleting/: test_autocomplete.py
test/db/: test_local.py  test_postgresql.py  test_user.py
utils/: gui.py  hotkey.py  music_player.py  prefix.py  utils.py
utils/legacy_reference/: select.py
