[project]
name = "meme-convention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "keyboard>=0.13.5",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "pyperclipimg>=0.2.0",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "supabase>=2.16.0",
    "tkinterdnd2>=0.4.3",
]
